Adding utility functions

--- a/ui.html
+++ b/ui.html
@@ -68,8 +68,8 @@
 </style>
 
 <div class="header">
-	<svg width="41" height="55" viewBox="0 0 41 55" fill="none" xmlns="http://www.w3.org/2000/svg">
-		<rect x="19.1365" width="3.49813" height="17.4907" fill="#FE9B11" />
+	<svg width="44" height="60" viewBox="0 0 44 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<rect x="20.1365" width="3.49813" height="17.4907" fill="#FE9B11" />
 		<rect x="6.29785" y="7.46729" width="3.49813" height="17.4907" transform="rotate(-45 6.29785 7.46729)" fill="#FE9B11" />
 		<rect x="33.2456" y="4.83887" width="3.49813" height="17.4907" transform="rotate(45 33.2456 4.83887)" fill="#FE9B11" />
 		<rect x="3.39478" y="20.4058" width="3.49813" height="34.9813" transform="rotate(-90 3.39478 20.4058)" fill="#FE9B11" />
@@ -133,7 +133,7 @@
 			if (message.count > 0) {
 				countEl.textContent = `${message.count} icons`;
 			} else {
-				countEl.textContent = 'Select the iconMaster';
+				countEl.textContent = 'Select the artboard';
 			}
 		}
 
