Adding component as icons support

--- a/ui.html
+++ b/ui.html
@@ -133,7 +133,7 @@
 			if (message.count > 0) {
 				countEl.textContent = `${message.count} icons`;
 			} else {
-				countEl.textContent = 'Select the artboard';
+				countEl.textContent = 'Select an artboard';
 			}
 		}
 
