--- a/ui.html
+++ b/ui.html
@@ -21,6 +21,11 @@
 		align-items: center;
 	}
 
+	.button-group {
+		display: flex;
+		gap: 8px;
+	}
+
 	button {
 		background-color: #fe9b11;
 		color: #653d05;
@@ -28,14 +33,36 @@
 		padding: 0;
 		border-radius: 8px;
 		cursor: pointer;
-		width: 100%;
 		font-weight: 550;
 		font-size: 15px;
 		letter-spacing: -0.2px;
 		display: flex;
 		align-items: stretch;
 		justify-content: space-between;
-		transition: opacity 0.2s ease-in-out;
+		transition: opacity 0.1s ease-in-out;
+	}
+
+	#export-button {
+		flex: 1;
+	}
+
+	.analyze-btn {
+		width: 44px;
+		height: 100%;
+		padding: 0;
+		margin-left: 8px;
+		border: 2px solid #653d059e;
+		background-color: transparent;
+		border-radius: 8px;
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.analyze-btn:disabled {
+		cursor: not-allowed;
+		opacity: 0.5;
 	}
 
 	.button-content {
@@ -43,10 +70,6 @@
 		align-items: center;
 		padding: 12px 16px;
 		position: relative;
-	}
-
-	button:not([disabled]):hover {
-		background-color: #e08300;
 	}
 
 	#status {
@@ -133,25 +156,76 @@
 		<path d="M4.34717 24.4873H7.92926V38.4798H4.34717V24.4873Z" fill="white" />
 	</svg>
 </div>
-<button id="export-button">
-	<div class="button-content">
-		<div class="spinner"></div>
-		<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<path d="M3.5 2C2.67157 2 2 2.67157 2 3.5V6C2 6.82843 2.67157 7.5 3.5 7.5H6C6.82843 7.5 7.5 6.82843 7.5 6V3.5C7.5 2.67157 6.82843 2 6 2H3.5Z" fill="#653D05" />
-			<path d="M3.5 8.5C2.67157 8.5 2 9.17157 2 10V12.5C2 13.3284 2.67157 14 3.5 14H6C6.82843 14 7.5 13.3284 7.5 12.5V10C7.5 9.17157 6.82843 8.5 6 8.5H3.5Z" fill="#653D05" />
-			<path d="M10 8.5C9.17157 8.5 8.5 9.17157 8.5 10V12.5C8.5 13.3284 9.17157 14 10 14H12.5C13.3284 14 14 13.3284 14 12.5V10C14 9.17157 13.3284 8.5 12.5 8.5H10Z" fill="#653D05" />
-			<path d="M9 5.25V4.25H10.75V2.5H11.75V4.25H13.5V5.25H11.75V7H10.75V5.25H9Z" fill="#653D05" />
+<div style="display: flex; align-items: center">
+	<button id="export-button">
+		<div class="button-content">
+			<div class="spinner"></div>
+			<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M3.5 2C2.67157 2 2 2.67157 2 3.5V6C2 6.82843 2.67157 7.5 3.5 7.5H6C6.82843 7.5 7.5 6.82843 7.5 6V3.5C7.5 2.67157 6.82843 2 6 2H3.5Z" fill="#653D05" />
+				<path d="M3.5 8.5C2.67157 8.5 2 9.17157 2 10V12.5C2 13.3284 2.67157 14 3.5 14H6C6.82843 14 7.5 13.3284 7.5 12.5V10C7.5 9.17157 6.82843 8.5 6 8.5H3.5Z" fill="#653D05" />
+				<path d="M10 8.5C9.17157 8.5 8.5 9.17157 8.5 10V12.5C8.5 13.3284 9.17157 14 10 14H12.5C13.3284 14 14 13.3284 14 12.5V10C14 9.17157 13.3284 8.5 12.5 8.5H10Z" fill="#653D05" />
+				<path d="M9 5.25V4.25H10.75V2.5H11.75V4.25H13.5V5.25H11.75V7H10.75V5.25H9Z" fill="#653D05" />
+			</svg>
+			<span class="button-text">Generate new set</span>
+		</div>
+		<div id="count">Select the iconMaster</div>
+	</button>
+	<button id="analyze" class="analyze-btn" disabled title="Analyze SVG">
+		<svg width="20" height="20" style="margin-right: 0px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="stroke-icon">
+			<path
+				d="M6 17.9745C6.1287 19.2829 6.41956 20.1636 7.07691 20.8209C8.25596 22 10.1536 22 13.9489 22C17.7442 22 19.6419 22 20.8209 20.8209C22 19.6419 22 17.7442 22 13.9489C22 10.1536 22 8.25596 20.8209 7.07691C20.1636 6.41956 19.2829 6.1287 17.9745 6"
+				stroke="white"
+				stroke-width="1.5"
+			/>
+			<path
+				d="M2 10C2 6.22876 2 4.34315 3.17157 3.17157C4.34315 2 6.22876 2 10 2C13.7712 2 15.6569 2 16.8284 3.17157C18 4.34315 18 6.22876 18 10C18 13.7712 18 15.6569 16.8284 16.8284C15.6569 18 13.7712 18 10 18C6.22876 18 4.34315 18 3.17157 16.8284C2 15.6569 2 13.7712 2 10Z"
+				stroke="white"
+				stroke-width="1.5"
+			/>
+			<path
+				d="M2 11.1185C2.61902 11.0398 3.24484 11.001 3.87171 11.0023C6.52365 10.9533 9.11064 11.6763 11.1711 13.0424C13.082 14.3094 14.4247 16.053 15 18"
+				stroke="white"
+				stroke-width="1.5"
+				stroke-linejoin="round"
+			/>
+			<path d="M12.9998 7H13.0088" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 		</svg>
-		<span class="button-text">Generate new set</span>
-	</div>
-	<div id="count">Select the iconMaster</div>
-</button>
+		<svg width="20" height="20" style="margin-right: 0px; display: none" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="fill-icon">
+			<path
+				fill-rule="evenodd"
+				clip-rule="evenodd"
+				d="M20.1129 7.78312C19.6979 7.36808 19.0964 7.11438 17.8757 6.9943L18.0715 5.00391C19.4675 5.14123 20.6275 5.46925 21.5272 6.36891C22.3335 7.1752 22.6805 8.19058 22.8428 9.39768C22.9992 10.5606 22.9991 12.0394 22.9991 13.8748V14.0212C22.9991 15.8567 22.9992 17.3355 22.8428 18.4984C22.6805 19.7055 22.3335 20.7209 21.5272 21.5272C20.7209 22.3335 19.7055 22.6805 18.4984 22.8428C17.3355 22.9992 15.8567 22.9991 14.0212 22.9991H13.8748C12.0394 22.9991 10.5606 22.9992 9.39768 22.8428C8.19058 22.6805 7.1752 22.3335 6.36891 21.5272C5.46925 20.6275 5.14123 19.4675 5.00391 18.0715L6.9943 17.8757C7.11438 19.0964 7.36808 19.6979 7.78312 20.1129C8.15588 20.4857 8.67885 20.7282 9.66417 20.8606C10.6783 20.997 12.0221 20.9991 13.948 20.9991C15.874 20.9991 17.2178 20.997 18.2319 20.8606C19.2172 20.7282 19.7402 20.4857 20.1129 20.1129C20.4857 19.7402 20.7282 19.2172 20.8606 18.2319C20.997 17.2178 20.9991 15.874 20.9991 13.948C20.9991 12.0221 20.997 10.6783 20.8606 9.66417C20.7282 8.67885 20.4857 8.15588 20.1129 7.78312Z"
+				fill="white"
+			/>
+			<path
+				fill-rule="evenodd"
+				clip-rule="evenodd"
+				d="M9.92684 1H10.0732C11.8966 0.999973 13.3664 0.999951 14.5223 1.15537C15.7225 1.31672 16.733 1.66191 17.5355 2.46447C18.3381 3.26702 18.6833 4.27752 18.8446 5.47767C19.0001 6.63362 19 8.10336 19 9.9268V10.0732C19 11.8966 19.0001 13.3664 18.8446 14.5223C18.6833 15.7225 18.3381 16.733 17.5355 17.5355C16.733 18.3381 15.7225 18.6833 14.5223 18.8446C13.3664 19.0001 11.8966 19 10.0732 19H9.9268C8.10336 19 6.63362 19.0001 5.47767 18.8446C4.27752 18.6833 3.26702 18.3381 2.46447 17.5355C1.66191 16.733 1.31672 15.7225 1.15537 14.5223C0.999951 13.3664 0.999973 11.8966 1 10.0732V9.92684C0.999973 8.10338 0.999951 6.63362 1.15537 5.47767C1.31672 4.27752 1.66191 3.26702 2.46447 2.46447C3.26702 1.66191 4.27752 1.31672 5.47767 1.15537C6.63362 0.999951 8.10338 0.999973 9.92684 1ZM5.74416 3.13753C4.76579 3.26907 4.2477 3.50966 3.87868 3.87868C3.50966 4.2477 3.26907 4.76579 3.13753 5.74416C3.00213 6.7513 3 8.08611 3 10C3 11.9139 3.00213 13.2487 3.13753 14.2558C3.26907 15.2342 3.50966 15.7523 3.87868 16.1213C4.2477 16.4903 4.76579 16.7309 5.74416 16.8625C6.7513 16.9979 8.08611 17 10 17C11.9139 17 13.2487 16.9979 14.2558 16.8625C15.2342 16.7309 15.7523 16.4903 16.1213 16.1213C16.4903 15.7523 16.7309 15.2342 16.8625 14.2558C16.9979 13.2487 17 11.9139 17 10C17 8.08611 16.9979 6.7513 16.8625 5.74416C16.7309 4.76579 16.4903 4.2477 16.1213 3.87868C15.7523 3.50966 15.2342 3.26907 14.2558 3.13753C13.2487 3.00213 11.9139 3 10 3C8.08611 3 6.7513 3.00213 5.74416 3.13753Z"
+				fill="white"
+			/>
+			<path
+				d="M11.6363 12.4162C9.4301 10.9618 6.68031 10.2023 3.87635 10.2523C3.2166 10.2512 2.55784 10.2921 1.90597 10.3744C1.53026 10.4219 1.24888 10.742 1.25 11.1207C1.25458 12.6661 1.28026 13.8928 1.45316 14.8725C1.63123 15.8815 1.97481 16.6895 2.64946 17.3603C3.40134 18.1079 4.35431 18.4395 5.53219 18.5969C6.67735 18.75 8.14081 18.75 9.98955 18.75L10.1393 18.75C12.2827 18.7501 13.9178 18.7501 15.1501 18.4985C15.3602 18.4556 15.5419 18.3248 15.6492 18.1391C15.7566 17.9535 15.7794 17.7308 15.7118 17.5272C15.0373 15.4965 13.6026 13.7125 11.6363 12.4162Z"
+				fill="white"
+			/>
+			<path
+				fill-rule="evenodd"
+				clip-rule="evenodd"
+				d="M12 6.75C12 6.05964 12.5571 5.5 13.2444 5.5C13.9268 5.5 14.5 6.05988 14.5 6.75C14.5 7.44012 13.9268 8 13.2444 8C12.5571 8 12 7.44036 12 6.75Z"
+				fill="white"
+			/>
+		</svg>
+	</button>
+</div>
+
 <div id="status"></div>
 
 <script>
 	const statusEl = document.getElementById('status');
 	const countEl = document.getElementById('count');
 	const exportButton = document.getElementById('export-button');
+	const analyzeButton = document.getElementById('analyze');
+	const strokeIcon = analyzeButton.querySelector('.stroke-icon');
+	const fillIcon = analyzeButton.querySelector('.fill-icon');
 	const buttonText = exportButton.querySelector('.button-text');
 	let hasSelection = false;
 
@@ -172,6 +246,10 @@
 		);
 	};
 
+	analyzeButton.onclick = () => {
+		parent.postMessage({pluginMessage: {type: 'analyze-svg'}}, '*');
+	};
+
 	onmessage = (event) => {
 		const message = event.data.pluginMessage;
 
@@ -181,9 +259,15 @@
 				countEl.textContent = `${message.count} icons`;
 				exportButton.style.opacity = '1';
 				exportButton.style.cursor = 'pointer';
+				analyzeButton.disabled = !message.enableAnalyze;
+				strokeIcon.style.display = message.enableAnalyze ? 'none' : 'block';
+				fillIcon.style.display = message.enableAnalyze ? 'block' : 'none';
 			} else {
 				countEl.textContent = 'Select an artboard';
 				exportButton.style.cursor = 'not-allowed';
+				analyzeButton.disabled = true;
+				strokeIcon.style.display = 'block';
+				fillIcon.style.display = 'none';
 			}
 		}
 
