Adding analyze asset support

--- a/ui.html
+++ b/ui.html
@@ -39,7 +39,10 @@
 		display: flex;
 		align-items: stretch;
 		justify-content: space-between;
-		transition: opacity 0.1s ease-in-out;
+	}
+
+	button:hover {
+		background-color: #fe9b11de;
 	}
 
 	#export-button {
@@ -58,6 +61,11 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	}
+
+	.analyze-btn:hover {
+		background-color: transparent;
+		border: 2px solid #653d05;
 	}
 
 	.analyze-btn:disabled {
